Fix footer iframe widths on mobile

--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -40,12 +40,15 @@
 
   .twitter {
     height: 3rem;
+    width: 100%;
+    max-width: 450px;
   }
   
   .facebook {
-    height: 3rem;
-    width: 450px;
-    display: block;
+    height: 4rem;
+    width: 100%;
+    max-width: 450px;
+    margin-bottom: 1rem;
   }
 }
 
